integrate autokuma and sort services

--- a/stacks/forgejo/compose.yaml
+++ b/stacks/forgejo/compose.yaml
@@ -16,11 +16,9 @@ x-common-settings: &common-settings
 services:
   forgejo:
     <<: *common-settings
-    image: codeberg.org/forgejo/forgejo:${forgejo_version:-13-rootless}
-    container_name: forgejo
-    user: ${uid:-1000}:${gid:-1000}
     cap_drop:
       - ALL
+    container_name: forgejo
     environment:
       FORGEJO__database__DB_TYPE: postgres
       FORGEJO__database__HOST: forgejodb:5432
@@ -32,7 +30,10 @@ services:
       USER_UID: ${uid:-1000}
     depends_on:
       - forgejodb
+    image: codeberg.org/forgejo/forgejo:${forgejo_version:-13-rootless}
     labels:
+      kuma.__docker:
+      kuma.__web: '"fj.${domain:?}", "443"'
       traefik.enable: "true"
       traefik.http.routers.forgejo.entryPoints: "https"
       traefik.http.routers.forgejo.rule: "Host(`fj.${domain:?}`)"
@@ -40,6 +41,7 @@ services:
     networks:
       default:
       proxy:
+    user: ${uid:-1000}:${gid:-1000}
     volumes:
       - ${data:-.}/app/data:/var/lib/gitea
       - ${data:-.}/app/conf:/etc/gitea
@@ -47,8 +49,6 @@ services:
       - /etc/localtime:/etc/localtime:ro
   forgejodb:
     <<: *common-settings
-    image: postgres:${postgres_version:-14}
-    container_name: forgejodb
     cap_drop:
       - ALL
     cap_add:
@@ -57,22 +57,25 @@ services:
       - FOWNER
       - SETGID
       - SETUID
+    container_name: forgejodb
     environment:
       POSTGRES_DB: ${db_name:-forgejo}
       POSTGRES_PASSWORD: ${db_pass:?}
       POSTGRES_USER: ${db_user:-forgejo}
+    image: postgres:${postgres_version:-14}
+    labels:
+      kuma.__docker:
     networks:
       default:
     volumes:
       - ${data:-.}/db:/var/lib/postgresql/data
-  runner:
+  forgejo_runner:
     <<: *common-settings
-    image: gitea/act_runner:${runner_version:-nightly}
-    container_name: forgejo_runner
     cap_drop:
       - ALL
     cap_add:
       - CHOWN
+    container_name: forgejo_runner
     depends_on:
       - forgejo
     environment:
@@ -84,6 +87,9 @@ services:
         ubuntu-20.04:docker://docker.gitea.com/runner-images:ubuntu-20.04"
       GITEA_RUNNER_NAME: forgejo_runner
       GITEA_RUNNER_REGISTRATION_TOKEN: ${token}
+    image: gitea/act_runner:${runner_version:-nightly}
+    labels:
+      kuma.__docker:
     networks:
       default: null
     volumes:
