--- a/stacks/media/compose.yaml
+++ b/stacks/media/compose.yaml
@@ -16,104 +16,106 @@ x-common-settings: &common-settings
 services:
   calibre:
     <<: *common-settings
-    image: lscr.io/linuxserver/calibre-web:${calibre_web_version:-latest}
-    container_name: calibre
     cap_drop:
       - ALL
     cap_add:
       - CHOWN
       - SETGID
       - SETUID
-    networks:
-      proxy: null
+    container_name: calibre
     environment:
       PGID: ${gid:-1000}
       PUID: ${uid:-1000}
       TZ: ${timezone:-UTC}
-    volumes:
-      - ${data:-.}/calibre:/config
-      - ${media}/Books:/books
+    image: lscr.io/linuxserver/calibre-web:${calibre_web_version:-latest}
     labels:
+      kuma.__docker:
+      kuma.__web: '"books.${domain:?}", "443"'
       traefik.enable: "true"
       traefik.http.routers.calibre.entryPoints: "https"
       traefik.http.routers.calibre.middlewares: "allowedIPs@file"
       traefik.http.routers.calibre.rule: "Host(`books.${domain:?}`)"
       traefik.http.services.calibre.loadbalancer.server.url: "http://calibre:8083"
+    networks:
+      proxy: null
+    volumes:
+      - ${data:-.}/calibre:/config
+      - ${media}/Books:/books
   jellyfin:
     <<: *common-settings
-    image: lscr.io/linuxserver/jellyfin:${jellyfin_version:-latest}
-    container_name: jellyfin
     cap_drop:
       - ALL
     cap_add:
       - CHOWN
       - SETGID
       - SETUID
-    networks:
-      proxy: null
+    container_name: jellyfin
+    devices:
+      - /dev/dri
     environment:
       JELLYFIN_PublishedServerUrl: jf.${domain:?}
       PGID: ${gid:-1000}
       PUID: ${uid:-1000}
       TZ: ${timezone:-UTC}
-    volumes:
-      - ${data:-.}/jellyfin:/config:rw
-      - ${media}/TV:/data/tvshows:rw
-      - ${media}/Movies:/data/movies:rw
-      - ${media}/Music:/data/music:rw
-    devices:
-      - /dev/dri
+    image: lscr.io/linuxserver/jellyfin:${jellyfin_version:-latest}
     labels:
+      kuma.__docker:
+      kuma.__web: '"jf.${domain:?}", "443"'
       traefik.enable: "true"
       traefik.http.routers.jellyfin.entryPoints: "https"
       traefik.http.routers.jellyfin.middlewares: "allowedIPs@file"
       traefik.http.routers.jellyfin.rule: "Host(`jf.${domain:?}`)"
       traefik.http.services.jellyfin.loadbalancer.server.url: "http://jellyfin:8096"
+    networks:
+      proxy: null
+    volumes:
+      - ${data:-.}/jellyfin:/config:rw
+      - ${media}/TV:/data/tvshows:rw
+      - ${media}/Movies:/data/movies:rw
+      - ${media}/Music:/data/music:rw
   jellyseerr:
     <<: *common-settings
-    image: fallenbagel/jellyseerr:${jellyseerr_version:-latest}
-    container_name: jellyseerr
-    user: ${uid:-1000}:${gid:-1000}
     cap_drop:
       - ALL
-    init: true
     cap_add:
       - CHOWN
       - SETGID
       - SETUID
-    networks:
-      proxy: null
-    depends_on:
-      - jellyfin
+    container_name: jellyseerr
     environment:
       LOG_LEVEL: ${log_level:-warn}
       PGID: ${gid:-1000}
       PUID: ${uid:-1000}
       TZ: ${timezone:-UTC}
-    volumes:
-      - ${data:-.}/jellyseerr:/app/config/:rw
+    depends_on:
+      - jellyfin
+    image: fallenbagel/jellyseerr:${jellyseerr_version:-latest}
+    init: true
     labels:
+      kuma.__docker:
+      kuma.__web: '"js.${domain:?}", "443"'
       traefik.enable: "true"
       traefik.http.routers.jellyseerr.entryPoints: "https"
       traefik.http.routers.jellyseerr.middlewares: "allowedIPs@file,authelia@file"
       traefik.http.routers.jellyseerr.rule: "Host(`js.${domain:?}`)"
       traefik.http.services.jellyseerr.loadbalancer.server.url: "http://jellyseerr:5055"
-  navidrome:
-    <<: *common-settings
-    image: deluan/navidrome:${navidrome_version:-latest}
-    container_name: navidrome
-    user: ${uid:-1000}:${gid:-1000}
-    cap_drop:
-      - ALL
     networks:
       proxy: null
+    user: ${uid:-1000}:${gid:-1000}
+    volumes:
+      - ${data:-.}/jellyseerr:/app/config/:rw
+  navidrome:
+    <<: *common-settings
+    cap_drop:
+      - ALL
+    container_name: navidrome
     environment:
       ND_ENABLEUSEREDITING: false
       ND_REVERSEPROXYWHITELIST: 0.0.0.0/0
-    volumes:
-      - ${data:-.}/navidrome:/data:rw
-      - ${media}/Music:/music:ro
+    image: deluan/navidrome:${navidrome_version:-latest}
     labels:
+      kuma.__docker:
+      kuma.__web: '"nav.${domain:?}", "443"'
       traefik.enable: "true"
       traefik.http.routers.navidrome.entryPoints: "https"
       traefik.http.routers.navidrome.middlewares: "allowedIPs@file, authelia@file"
@@ -125,3 +127,9 @@ services:
       traefik.http.routers.navidrome-subsonic.middlewares: "allowedIPs@file"
       traefik.http.routers.navidrome-subsonic.priority: 50
       traefik.http.routers.navidrome-subsonic.rule: Host(`nav.${domain:?}`) && PathPrefix(`/rest/`) && !Query(`c`, `NavidromeUI`)
+    networks:
+      proxy: null
+    user: ${uid:-1000}:${gid:-1000}
+    volumes:
+      - ${data:-.}/navidrome:/data:rw
+      - ${media}/Music:/music:ro
