--- a/stacks/rustfs/compose.yaml
+++ b/stacks/rustfs/compose.yaml
@@ -16,20 +16,22 @@ x-common-settings: &common-settings
 services:
   rustfs:
     <<: *common-settings
-    image: rustfs/rustfs:${rustfs_version:-latest}
-    container_name: rustfs
-    user: ${uid:-1000}:${gid:-1000}
     cap_drop:
       - ALL
     command: --access-key ${default_access_key:?} --secret-key ${default_secret_key:?} /data
-    networks:
-      proxy:
+    container_name: rustfs
     environment:
       RUSTFS_ACCESS_KEY: ${default_access_key:?}
       RUSTFS_SECRET_KEY: ${default_secret_key:?}
-    volumes:
-      - ${data:-.}/data:/data
+    image: rustfs/rustfs:${rustfs_version:-latest}
     labels:
+      kuma.__docker:
+      kuma.rustfs_s3.http.name: web_rustfs_s3
+      kuma.rustfs_s3.http.notification_name_list: '["ntfy"]'
+      kuma.rustfs_s3.http.url: https://r3.${domain:?}:443
+      kuma.rustfs_web.http.name: web_rustfs
+      kuma.rustfs_web.http.notification_name_list: '["ntfy"]'
+      kuma.rustfs_web.http.url: https://rs.${domain:?}:443
       traefik.enable: "true"
       traefik.http.routers.rustfs.entryPoints: "https"
       traefik.http.routers.rustfs.middlewares: "localonly@file"
@@ -42,3 +44,8 @@ services:
       traefik.http.routers.rustfs-s3.rule: "Host(`r3.${domain:?}`)"
       traefik.http.routers.rustfs-s3.service: "rustfs-s3"
       traefik.http.services.rustfs-s3.loadbalancer.server.url: "http://rustfs:9000"
+    networks:
+      proxy:
+    user: ${uid:-1000}:${gid:-1000}
+    volumes:
+      - ${data:-.}/data:/data
