--- a/stacks/rxresume/compose.yaml
+++ b/stacks/rxresume/compose.yaml
@@ -15,10 +15,8 @@ x-common-settings: &common-settings
   stdin_open: false
   tty: false
 services:
-  postgres:
+  rxresume_postgres:
     <<: *common-settings
-    image: postgres:${postgres_version:-16-alpine}
-    container_name: rxresume_postgres
     cap_drop:
       - ALL
     cap_add:
@@ -27,10 +25,7 @@ services:
       - FOWNER
       - SETGID
       - SETUID
-    networks:
-      default: null
-    volumes:
-      - $data/db:/var/lib/postgresql/data
+    container_name: rxresume_postgres
     environment:
       POSTGRES_DB: ${db_name:-rxresume}
       POSTGRES_USER: ${db_user:-rxresume}
@@ -40,38 +35,42 @@ services:
       interval: 10s
       timeout: 5s
       retries: 5
-  chrome:
-    <<: *common-settings
-    image: ghcr.io/browserless/chromium:${chrome_version:-latest}
-    container_name: rxresume_chrome
-    cap_drop:
-      - ALL
+    image: postgres:${postgres_version:-16-alpine}
+    labels:
+      kuma.__docker:
     networks:
       default: null
+    volumes:
+      - $data/db:/var/lib/postgresql/data
+  rxresume_chrome:
+    <<: *common-settings
+    cap_drop:
+      - ALL
+    container_name: rxresume_chrome
     environment:
       HEALTH: "true"
       TOKEN: "${chrome_token:?}"
       PROXY_HOST: "printer.${domain:?}"
       PROXY_PORT: 443
       PROXY_SSL: "true"
+    image: ghcr.io/browserless/chromium:${chrome_version:-latest}
     labels:
+      kuma.__docker:
       traefik.enable: "true"
       traefik.http.routers.printer.entrypoints: "https"
       traefik.http.routers.printer.middlewares: "localonly@file"
       traefik.http.routers.printer.rule: "Host(`printer.${domain:?}`)"
       traefik.http.services.printer.loadbalancer.server.url: 'http://chrome:3000'
-  rxresume:
-    <<: *common-settings
-    image: amruthpillai/reactive-resume:${rxresume_version:-latest}
-    container_name: rxresume
-    cap_drop:
-      - ALL
     networks:
       default: null
-      proxy: null
+  rxresume:
+    <<: *common-settings
+    cap_drop:
+      - ALL
+    container_name: rxresume
     depends_on:
-      - postgres
-      - chrome
+      - rxresume_chrome
+      - rxresume_postgres
     environment:
       ACCESS_TOKEN_SECRET: ${access_token:?}
       CHROME_TOKEN: ${chrome_token:?}
@@ -91,9 +90,15 @@ services:
       STORAGE_SKIP_BUCKET_CHECK: "false"
       STORAGE_URL: https://s3.${domain:?}
       STORAGE_USE_SSL: "false"
+    image: amruthpillai/reactive-resume:${rxresume_version:-latest}
     labels:
+      kuma.__docker:
+      kuma.__web: '"rx.${domain:?}", "443"'
       traefik.enable: "true"
       traefik.http.routers.rxresume.entrypoints: "https"
       traefik.http.routers.rxresume.middlewares: "allowedIPs@file,authelia@file"
       traefik.http.routers.rxresume.rule: "Host(`rx.${domain:?}`)"
       traefik.http.services.rxresume.loadbalancer.server.url: 'http://rxresume:3000'
+    networks:
+      default: null
+      proxy: null
